页面： 修改首页 修改会员页面 修改会员添加功能BUG 修改会员导入 修改会员卡导入 修改客账总结账功能 修改客账消费项目转账 修改客账详情页面 修改取消订单功能

--- a/src/main/webapp/iframe_lockRoom.html
+++ b/src/main/webapp/iframe_lockRoom.html
@@ -73,7 +73,8 @@
 
         //监听查询按钮提交
         form.on('submit(formData)', function (data) {
-
+            if(data.field.lock !== 'ope' && (!startTime||!endTime)){showMsg('请选择锁房时间', 2, false);return false;}
+            if(!data.field.remark){showMsg('请输入锁房备注', 2, false);return false;}
             var obj = {};
             var selectArr = sessionStorage.getItem('selectArr');
             if (data.field.lock !== 'ope') {
