--- a/src/main/webapp/iframe_orderSettleAccounts.html
+++ b/src/main/webapp/iframe_orderSettleAccounts.html
@@ -245,6 +245,7 @@
                     success: function (res) {
                         if (res.success) {
                             showMsg('结账成功', 1, false);
+                            parent.location.href = location.href = "order.html";
                         } else {
                             showMsg('结账失败', 2, false);
                         }
