--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -343,7 +343,7 @@
                     title: '取消订单',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_orderCancel.html?orderId=' + data.orderId,
+                    content: 'iframe_orderCancel.html?id=' + data.orderId,
                     end: function (index, layero) {
                         tab.reload();
                     }
