--- a/src/main/webapp/iframe_modifyPriceYY.html
+++ b/src/main/webapp/iframe_modifyPriceYY.html
@@ -152,7 +152,7 @@
             }
         }
 		function getDatas() {
-debugger;
+// debugger;
   	      if(localStorage.modifyPrice){
               rsd = JSON.parse(localStorage.modifyPrice);
 
