--- a/src/main/webapp/iframe_pick_room3.html
+++ b/src/main/webapp/iframe_pick_room3.html
@@ -58,6 +58,11 @@
 		var $,element,$b,$remove,seleted=parent.sRooms1,allRoom,getSel=[];
         var downSelected = [];
         var yyxf  =  JSON.parse(localStorage.yyxf);
+        if(seleted && !seleted.length){
+
+            seleted = parent.sRooms;
+		}
+        console.log(seleted)
     layui.use(['element', 'jquery', 'table'], function () {
         element = layui.element,
         $ = jQuery = layui.$;
@@ -125,6 +130,10 @@
 
     });
 		function yes(){
+
+		    for(var i=0;i<seleted.length;i++){
+		        if(!seleted[i]['roomTypeName']) seleted[i]['roomTypeName'] = seleted[i]['roomType']
+			}
 			parent.parSelectRoom(seleted);
 			no();
 		}
@@ -220,9 +229,10 @@
 		    if(flag){
                 if(checkTypeByReShow(d)){
                     $("#houseType"+d.roomTypeId).append( '<span class="pick-fj pick-selected" id="id'+d.id+'">'+d.roomName+'</span>');
-                    // debugger;
+
                     $("#selNum"+d.roomTypeId).text($("#houseType"+d.roomTypeId).find("span").length)
                 }else{
+
                     $("#selList").append([ '<div class="prc-row" id="houseWP',
                         d.roomTypeId,
                         '">',
@@ -248,7 +258,7 @@
 
 				if(checkType(d)){
 					$("#houseType"+d.roomTypeId).append( '<span class="pick-fj pick-selected" id="id'+d.id+'">'+d.roomName+'</span>');
-					// debugger;
+
 					$("#selNum"+d.roomTypeId).text($("#houseType"+d.roomTypeId).find("span").length)
 				}else{
 					$("#selList").append([ '<div class="prc-row" id="houseWP',
@@ -307,15 +317,15 @@
         }
         function checkSel(d) {
             var dd = [].concat.apply([],seleted);
-
             for(var i=0;i<dd.length;i++){
                     if(dd[i].id == d.id) {
-                        break;
-                        if(d.oomMajorState=="dirty"){
+
+                        if(d.roomMajorState=="dirty"){
                             return "pick-zf-selected";
 						}else{
                             return "pick-jf-selected";
 						}
+                        break;
                     }
             }
         }
