--- a/src/main/webapp/iframe_pick_room2.html
+++ b/src/main/webapp/iframe_pick_room2.html
@@ -128,6 +128,7 @@
     });
     function yes(){
         for(var i=0;i<seleted.length;i++){
+            // debugger;
             if(!seleted[i]['roomId']){
                 seleted[i]['roomId'] = seleted[i]['id']+"";
             }
